--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-007.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-007.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CSS Regions: Transforms both named flow content and region</title>
-        <link rel="author" title="Mihai Balan" href="mailto:mibalan@adobe.com">
+        <title>CSS Regions: Transforms on both the named flow content and the region</title>
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+        <link rel="reviewer author" title="Mihai Balan" href="mailto:mibalan@adobe.com"> <!-- 2013-07-24 -->
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
         <link rel="help" href="http://www.w3.org/TR/css3-transforms/#two-d-transform-functions">
