fixed help links to use TR links & added image flags

--- a/contributors/ttwf_bj/finscn/submitted/background-origin/border-box.html
+++ b/contributors/ttwf_bj/finscn/submitted/background-origin/border-box.html
@@ -5,7 +5,7 @@
   <title>CSS Backgrounds Test:  background-origin:border-box</title>
   <link rel="author" title="finscn" href="mail:finscn@gmail.com" >
   <link rel="help" href="http://www.w3.org/TR/css3-background/#the-background-origin" >
-  <meta name="flags" content="" >
+  <meta name="flags" content="image">
   <meta name="assert" content="border-box : The position is relative to the border box." >
 
   
