--- a/contributors/ttwf_bj/finscn/submitted/background-origin/padding-box.html
+++ b/contributors/ttwf_bj/finscn/submitted/background-origin/padding-box.html
@@ -5,7 +5,7 @@
   <title>CSS Backgrounds Test:  background-origin:padding-box</title>
   <link rel="author" title="finscn" href="mail:finscn@gmail.com" >
   <link rel="help" href="http://www.w3.org/TR/css3-background/#the-background-origin" >
-  <meta name="flags" content="" >
+  <meta name="flags" content="image">
   <meta name="assert" content="padding-box : The position is relative to the padding box. (For single boxes ‘0 0’ is the upper left corner of the padding edge, ‘100% 100%’ is the lower right corner.)" >
 
   
