--- a/contributors/ttwf_bj/finscn/submitted/background-clip/border-box_with_size.html
+++ b/contributors/ttwf_bj/finscn/submitted/background-clip/border-box_with_size.html
@@ -4,8 +4,8 @@
 <head>
   <title>CSS Backgrounds Test:  background-clip:border-box & background-size</title>
   <link rel="author" title="finscn" href="mail:finscn@gmail.com" >
-  <link rel="help" href="http://dev.w3.org/csswg/css3-background/#the-background-clip" >
-  <meta name="flags" content="" >
+  <link rel="help" href="http://www.w3.org/TR/css3-background/#the-background-clip" >
+  <meta name="flags" content="image">
   <meta name="assert" content="border-box : The background is painted within (clipped to) the border box." >
 
   <meta charset="utf-8">
