--- a/contributors/ttwf_bj/finscn/submitted/background-origin/content-box.html
+++ b/contributors/ttwf_bj/finscn/submitted/background-origin/content-box.html
@@ -4,8 +4,8 @@
 <head>
   <title>CSS Backgrounds Test:  background-origin:content-box</title>
   <link rel="author" title="finscn" href="mail:finscn@gmail.com" >
-  <link rel="help" href="http://dev.w3.org/csswg/css3-background/#the-background-origin" >
-  <meta name="flags" content="" >
+  <link rel="help" href="http://www.w3.org/TR/css3-background/#the-background-origin" >
+  <meta name="flags" content="image">
   <meta name="assert" content="content-box : The position is relative to the content box." >
 
   <meta charset="utf-8">
