--- a/contributors/microsoft/submitted/CSS3/background/border-radius-style-002.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-radius-style-002.htm
@@ -3,7 +3,8 @@
     <head>
         <title>CSS Test: 'Border-radius' is set with 'border-style: dashed'</title>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
-        <link rel="help" href="http://www.w3.org/TR/css3-background/" />
+        <link rel="help" href="http://www.w3.org/TR/css3-background/#the-border-style" />
+        <link rel="help" href="http://www.w3.org/TR/css3-background/#dashed" />
         <meta name="flags" content="" />
         <meta name="assert" content="'Border-style: dashed' follows the curve of the border." />
         <style type="text/css">
