--- a/contributors/adobe/submitted/exclusions/shape-outside-001.html
+++ b/contributors/adobe/submitted/exclusions/shape-outside-001.html
@@ -4,7 +4,7 @@
         <title>CSS Shapes Test: shape-outside on right float</title>
         <link rel="author" title="Alan Stearns" href="mailto:stearns@adobe.com">
         <link rel="reviewer" title="Daniel Glazman" href="mailto:daniel.glazman@disruptive-innovations.com" /> <!-- 2012-10-27 -->
-        <link rel="help" href="http://www.w3.org/TR/css3-exclusions/#shape-outside-property">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes/#shapes">
         <link rel="match" href="shape-ref.html"/>
         <meta name="flags" content="">
         <meta name="assert" content="Inline-block children should lay out inside shape-inside boundary.">
