fixed help links

--- a/contributors/opera/submitted/css3-flexbox/flexbox_flex-formatting-interop.html
+++ b/contributors/opera/submitted/css3-flexbox/flexbox_flex-formatting-interop.html
@@ -2,7 +2,7 @@
 <title>flexbox | flex formatting context :: negative margins and
 	border box</title>
 <link rel="author" href="//opera.com" title="Opera Software">
-<link rel="help" href="http://www.w3.org/TR/css3-flexbox/">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-containers">
 <link rel="match" href="flexbox_flex-formatting-interop-ref.html">
 <style>
 * {margin: 0;}
