--- a/contributors/opera/submitted/css3-flexbox/flexbox_flex-natural-variable-zero-basis.html
+++ b/contributors/opera/submitted/css3-flexbox/flexbox_flex-natural-variable-zero-basis.html
@@ -2,7 +2,7 @@
 <title>flexbox | flex: larger integer, zero basis</title>
 <link rel="author" href="//opera.com" title="Opera Software">
 <link rel="help"
-	href="http://www.w3.org/TR/css3-flexbox/$flex-basis-property">
+	href="http://www.w3.org/TR/css3-flexbox/#flex-basis-propdef">
 <link rel="match" href="flexbox_flex-natural-variable-zero-basis-ref.html">
 <style>
 div {
