--- a/contributors/opera/submitted/css3-flexbox/interactive/flexbox_interactive_flex-shrink-transitions-invalid.html
+++ b/contributors/opera/submitted/css3-flexbox/interactive/flexbox_interactive_flex-shrink-transitions-invalid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>flexbox | invalid flex-shrink transition</title>
 <link rel="author" href="//opera.com" title="Opera Software">
-<link rel="help" href="http://www.w3.org/TR/css3-flexbox/">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-shrink-property">
 <meta name="flags" content="interact">
 <style>
 div {
