--- a/contributors/ttwf_seattle/vbora85/flexbox/submitted/flexbox_flex-auto-notallitems-bothlines.html
+++ b/contributors/ttwf_seattle/vbora85/flexbox/submitted/flexbox_flex-auto-notallitems-bothlines.html
@@ -3,7 +3,7 @@
 <head>
     <title>CSS Flexbox Test: Test flex:auto - no flex:auto set for 1 item in line 1, and another item in line 2</title>
     <link rel="author" title="Bora Vuth" href="mailto:vbora85@gmail.com">
-	<link rel="help" href="http://dev.w3.org/csswg/css-flexbox/#single-line">
+	<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-common">
 	<meta name="assert" content="Test passes if box1 and box3 are 100px width; and box3 width's X axis doesn't end with the same one of box2's">
 	<style type="text/css">
         #flexContainer {
