--- a/contributors/ttwf_seattle/vbora85/flexbox/submitted/flexbox_flex-auto-notallitems-firstline.html
+++ b/contributors/ttwf_seattle/vbora85/flexbox/submitted/flexbox_flex-auto-notallitems-firstline.html
@@ -3,7 +3,7 @@
 <head>
     <title>CSS Flexbox Test: flex:auto - one item in line 1 doesn't have that flex:auto set</title>
     <link rel="author" title="Bora Vuth" href="mailto:vbora85@gmail.com">
-	<link rel="help" href="http://dev.w3.org/csswg/css-flexbox/#single-line">
+	<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-common">
     <meta name="assert" content="Test passes if box1's width is 100px (smaller than box2's width)">
     <style type="text/css">
         #flexContainer {
