--- a/contributors/ttwf_seattle/vbora85/flexbox/submitted/flexbox_flex-auto-notallitems-secondline.html
+++ b/contributors/ttwf_seattle/vbora85/flexbox/submitted/flexbox_flex-auto-notallitems-secondline.html
@@ -3,7 +3,7 @@
 <head>
     <title>CSS Flexbox Test: Test flex:auto - no flex:auto set for item on 2nd line</title>
     <link rel="author" title="Bora Vuth" href="mailto:vbora85@gmail.com">
-	<link rel="help" href="http://dev.w3.org/csswg/css-flexbox/#single-line">
+	<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-common">
     <meta name="assert" content="Test passes if box3's width is 100px (smaller than box1's width), and it starts at the same X axis as box1">
     <style type="text/css">
         #flexContainer {
