--- a/contributors/opera/submitted/css3-flexbox/flexbox_direction-row-reverse.html
+++ b/contributors/opera/submitted/css3-flexbox/flexbox_direction-row-reverse.html
@@ -2,7 +2,7 @@
 <title>flexbox | flex-direction: row-reverse</title>
 <link rel="author" href="//opera.com" title="Opera Software">
 <link rel="help"
-	href="http://www.w3.org/TR/css3-flexbox/#flow-direction-property">
+	href="http://www.w3.org/TR/css3-flexbox/#flex-direction-property">
 <link rel="match" href="flexbox_direction-row-reverse-ref.html">
 <style>
 * {font-family: monospace;}
