--- a/contributors/opera/submitted/css3-flexbox/flexbox_generated.html
+++ b/contributors/opera/submitted/css3-flexbox/flexbox_generated.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>flexbox | flexcontainer vs generated content</title>
 <link rel="author" href="//opera.com" title="Opera Software">
-<link rel="help" href="http://www.w3.org/TR/css3-flexbox/">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-container">
 <link rel="match" href="flexbox_generated-ref.html">
 <style>
 div {
