--- a/contributors/opera/submitted/css3-flexbox/flexbox_item-bottom-float.html
+++ b/contributors/opera/submitted/css3-flexbox/flexbox_item-bottom-float.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>flexbox | GCPM bottom float</title>
 <link rel="author" href="//opera.com" title="Opera Software">
-<link rel="help" href="http://www.w3.org/TR/css3-flexbox/">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-property">
 <link rel="match" href="flexbox_item-bottom-float-ref.html">
 <style>
 div {
