--- a/contributors/opera/submitted/css3-flexbox/flexbox_rowspan-overflow.html
+++ b/contributors/opera/submitted/css3-flexbox/flexbox_rowspan-overflow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>flexbox | flexcontainers in cells with rowspan</title>
 <link rel="author" href="//opera.com" title="Opera Software">
-<link rel="help" href="http://www.w3.org/TR/css3-flexbox/">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-property">
 <link rel="match" href="flexbox_rowspan-ref.html">
 <style>
 table {
