--- a/contributors/opera/submitted/css3-flexbox/flexbox_rtl-direction.html
+++ b/contributors/opera/submitted/css3-flexbox/flexbox_rtl-direction.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <title>flexbox | flex-direction: column-reverse | rtl</title>
 <link rel="author" href="//opera.com" title="Opera Software">
-<link rel="help" href="http://www.w3.org/TR/css3-flexbox/">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-direction">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-flow-column-reverse">
 <link rel="match" href="flexbox_rtl-direction-ref.html">
 <style>
 div {
