--- a/contributors/opera/submitted/css3-flexbox/flexbox_rtl-flow-reverse.html
+++ b/contributors/opera/submitted/css3-flexbox/flexbox_rtl-flow-reverse.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <title>flexbox | flex-flow: column wrap-reverse | rtl</title>
 <link rel="author" href="//opera.com" title="Opera Software">
-<link rel="help" href="http://www.w3.org/TR/css3-flexbox/">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-flow-property">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-flow-column">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-flow-wrap-reverse">
 <link rel="match" href="flexbox_rtl-flow-reverse-ref.html">
 <style>
 div {
