--- a/contributors/ttwf_seattle/vbora85/flexbox/submitted/flexbox_flex-order.html
+++ b/contributors/ttwf_seattle/vbora85/flexbox/submitted/flexbox_flex-order.html
@@ -3,7 +3,7 @@
 <head>
     <title>CSS Flexbox Test: flex:auto - applying to all items</title>
     <link rel="author" title="Bora Vuth" href="mailto:vbora85@gmail.com">
-	<link rel="help" href="http://dev.w3.org/csswg/css-flexbox/#single-line">
+	<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-common">
     <meta name="assert" content="Test passes if all boxes are not 100px width; and box3 start position is the same X axis as box1's and position is the same as box2">
     <style type="text/css">
         #flexContainer {
