fixed help links

--- a/contributors/adobe/submitted/regions/flow-into-parsing-001.html
+++ b/contributors/adobe/submitted/regions/flow-into-parsing-001.html
@@ -3,7 +3,8 @@
     <head>
         <title>CSS Regions Parsing Test: Parse webkit-flow-into property</title>
         <link rel="author" title="Jacob Goldstein" href="mailto:jacobg@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css3-regions/#properties-and-rules">
+        <link rel="help" href="http://www.w3.org/TR/css3-regions/#flow-into"/>
+        <link rel="help" href="http://www.w3.org/TR/css3-regions/#flow-from"/>
         <meta name="flags" content="dom">
         <meta name="assert" content="Value specified for the webkit-flow-into property should be parsed correctly.">
         <script src="/resources/testharness.js"></script>
