HTML spec no longer permits <title> to be empty.

--- a/domain/html/domain3html.html
+++ b/domain/html/domain3html.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8> 
 <link href="domain3htmlrules.xml" rel="its-rules"/> 
 <meta name="keywords" content="sports law"/>
-<title></title>
+<title>Sports law</title>
 </head>
 <body>
 <p>
