--- a/domain/html/domain4html.html
+++ b/domain/html/domain4html.html
@@ -10,7 +10,7 @@
 <its:domainRule selector="/h:html/h:body" domainPointer="/h:html/h:head/h:meta[@name='x-mykeywords' or @name=$domainParam]/@content" domainMapping="'sports law' LAW, 'labor law' LAW, 'contract law' LAW, 'competition law' LAW,'tort law' LAW"/>
 </its:rules>
 </script>
-<title></title>
+<title>Sports law</title>
 </head>
 <body>
 <p>Some text about sport and law.</p>
