--- a/elementswithintext/html/withintext3html.html
+++ b/elementswithintext/html/withintext3html.html
@@ -7,8 +7,8 @@
   </head> 
   <body> 
    <section>
-    <span itemref="firstkeyword">horse</span> 
-    <span itemref="secondkeyword">appaloosa</span> 
+    <span itemprop="firstkeyword">horse</span> 
+    <span itemprop="secondkeyword">appaloosa</span> 
    </section> 
    <p> 
    The Appaloosa
@@ -16,7 +16,7 @@
    The name comes from "Palouse horse" in reference to the Palouse River in Northern Idaho.
     </cite> 
    are rugged horses originally breed by the
-    <span itemref="keyword">Nez-Perce</span> 
+    <span itemprop="keyword">Nez-Perce</span> 
    tribe in the US Northwest.
    </p> 
    <p> 
