--- a/elementswithintext/html/withintext4html.html
+++ b/elementswithintext/html/withintext4html.html
@@ -13,8 +13,8 @@
   </head>
   <body>
    <section>
-    <span itemref="keyword">horse</span>
-    <span itemref="keyword">appaloosa</span>
+    <span itemprop="keyword">horse</span>
+    <span itemprop="keyword">appaloosa</span>
    </section>
    <p>
    The Appaloosa
@@ -22,7 +22,7 @@
    The name comes from "Palouse horse" in reference to the Palouse River in Northern Idaho.
     </cite>
    are rugged horses originally breed by the
-    <span itemref="keyword">Nez-Perce</span>
+    <span itemprop="keyword">Nez-Perce</span>
    tribe in the US Northwest.
    </p>
    <p>
