--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-flexbox-004.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-flexbox-004.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Regions: auto height region inside a fixed sized flexbox</title>
+		<title>CSS Regions: auto height region inside an auto height flexbox</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test that an auto-height region inside a flexbox is stretched to match the flexbox container's cross size.">
-		<link rel="match" href="reference/autoheight-flexbox-3-ref.html">
+		<meta name="assert" content="Test that an auto height region inside a flex container with auto height is
+		displayed properly. The flexbox should have the same height as the region.">
+		<link rel="match" href="reference/autoheight-flexbox-003-ref.html">
 		<style>
 			.content {
 				font-family: Ahem;
 				font-size: 20px;
-				line-height: 20px;
+				line-height: 1em;
 				color: green;
 				flow-into: flow;
 			}
 			.region {
-				background-color: red;
 				flow-from: flow;
 			}
 			.flex {
 				display: flex;
-				height: 100px;
 				width: 100px;
+			}
+
+			.red {
 				background-color: red;
 			}
 		</style>
@@ -44,6 +46,7 @@
 		</div>
 		<div class="flex">
 			<div class="region">
+				<p class="red">&nbsp;</p>
 			</div>
 		</div>
 	</body>
