--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-002.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-002.html
@@ -3,19 +3,22 @@
 	<head>
 		<title>CSS Regions: Auto-height regions with vertical writing mode in auto-height flexbox</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
 		<link rel="help" href="http://www.w3.org/TR/css3-writing-modes">
-		<meta name="assert" content="Test checks that auto-height regions having content with vertical writing mode are sized correctly when placed inside a flexbox container.">
+		<meta name="flags" content="ahem">
+		<meta name="assert" content="Test checks that auto-height regions having content with vertical writing mode are
+		sized correctly when placed inside a flex container. The flowed content should be displayed as a horizontal
+		green stripe.">
 		<link rel="match" href="reference/autoheight-regions-in-autoheight-flexbox-002-ref.html">
 		<style>
 			.content {
 				font-size: 20px;
 				line-height: 1em;
 				color: green;
-				background-color: green;
-				flow-into: flow;
+				font-family: Ahem;
+				font-smoothing: none;
+				flowinto: flow;
 				writing-mode: vertical-rl;
 			}
 
@@ -29,12 +32,16 @@
 				flow-from: flow;
 			}
 
+			.region > p {
+				background-color: red;
+			}
 		</style>
 	</head>
 	<body>
-		<ol>
-			<li>Test passes if you see a green stripe.</li>
-		</ol>
+		<ul>
+			<li>Test passes if you see a horizontal green stripe.</li>
+			<li>You shouldn't see any red.</li>
+		</ul>
 		<div class="content">
 			XX<br>
 			XX<br>
@@ -43,7 +50,9 @@
 			XX
 		</div>
 		<div class="flexbox">
-			<div class="region"> </div>
+			<div class="region">
+				<p>&nbsp;</p>
+			</div>
 		</div>
 	</body>
 </html>
