--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-007.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-007.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Regions: regions inside fixed sized flexbox</title>
+		<title>CSS Regions: auto-height regions inside fixed sized flexbox</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test that using the flex-basis property sizes the flex items to a percentage of the flexbox container's height.">
+		<meta name="assert" content="Test that using the flex-basis property sizes the flex items to a percentage of
+		the flex container's height when said items are auto-height regions. The last region, the outside the flex
+		container should not be visible.">
 		<link rel="match" href="reference/autoheight-regions-in-fixed-sized-flexbox-007-ref.html">
 		<style>
 			.content {
@@ -18,6 +19,7 @@
 				line-height: 1em;
 				color: green;
 				flow-into: flow;
+				font-smoothing: none;
 			}
 
 			.flex {
@@ -33,23 +35,28 @@
 				flow-from: flow;
 			}
 
+			.red {
+				background-color: red;
+			}
+
 		</style>
 	</head>
 	<body>
-		<ol>
+		<ul>
 			<li>Test passes if you see you three identical green stripes.</li>
-		</ol>
+			<li>You shouldn't see any red.</li>
+		</ul>
 		<div class="content">
 			XXXX<br>
 			XXXX<br>
 			XXXX<br>
-			XXXX<br>
+			XXXX
 		</div>
 		<div class="flex">
 			<div class="region"></div>
 			<div class="region"></div>
 			<div class="region"></div>
 		</div>
-		<div class="region"></div>
+		<div class="region"><p class="red">&nbsp;</p></div>
 	</body>
 </html>
