--- a/contributors/adobe/incoming/css3-regions/flexbox/regions-flexbox-002.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/regions-flexbox-002.html
@@ -3,33 +3,36 @@
 	<head>
 		<title>CSS Regions: flowing auto-height flexbox elements in region</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test that a flexbox container with auto height is flowed correctly inside a region with auto height. The region should fit the flexbox.">
-		<link rel="match" href="reference/regions-flexbox-2.html">
+		<meta name="assert" content="Test that flex containers with auto height are flowed inside a namedflow.">
+		<link rel="match" href="reference/regions-flexbox-001-ref.html">
 		<style>
 			.flex {
 				display: flex;
-				flow-into: flow;
 				font-family: Ahem;
 				font-size: 20px;
-				line-height: 20px;
+				line-height: 1em;
 				color: green;
+				flow-into: flow;
 			}
 
 			.region {
-				width: 100px;
-				padding: 10px;
+				height: 150px;
+				width: 200px;
 				background-color: gray;
 				flow-from: flow;
+			}
+
+			.red {
+				background-color: red;
 			}
 		</style>
 	</head>
 	<body>
 		<ul>
 			<li>Test passes if you see a green square inside a gray rectangle.</li>
+			<li>You shouldn't see any red.</li>
 		</ul>
 		<div class="flex">
 			XXXXX<br>
@@ -39,6 +42,7 @@
 			XXXXX
 		</div>
 		<div class="region">
+			<p class="red">&nbsp;</p>
 		</div>
 	</body>
 </html>
