--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-flexbox-001.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-flexbox-001.html
@@ -6,9 +6,10 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
-		<meta name="assert" content="Test that flowing a flexbox element inside a region with auto-height will enlarge the region to fit the content.">
-		<link rel="match" href="reference/autoheight-flexbox-1-ref.html">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
+		<meta name="assert" content="Test that flowing a flex container inside a region with auto-height will enlarge
+		the region to fit the content.">
+		<link rel="match" href="reference/autoheight-flexbox-001-ref.html">
 		<style>
 			.flex {
 				display: flex;
@@ -24,15 +25,21 @@
 				padding: 10px;
 				flow-from: flow;
 			}
+
+			.red {
+				background-color: red;
+			}
 		</style>
 	</head>
 	<body>
-		<ol>
+		<ul>
 			<li>Test passes if you see a green square inside a gray square.</li>
-		</ol>
+			<li>You shouldn't see any red.</li>
+		</ul>
 		<div class="flex">
 		</div>
 		<div class="region">
+			<p class="red">&nbsp;</p>
 		</div>
 	</body>
 </html>
