--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-001.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-001.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Regions: Auto-height regions in auto-height flexbox containers</title>
+		<title>CSS Regions: Auto-height regions in auto-height flexbox container</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-wrap-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-flow-property">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test that auto-height regions placed in a flexbox container with auto-height and row wrap reverse flow are sized correctly.">
+		<meta name="assert" content="Test that auto-height regions placed in a flex container with auto-height and
+		row wrap reverse flow are sized correctly. The content from the second flow should flow through the region on
+		the second row and into the region from the first row, making the left blue rectangle taller than the green
+		rectangle on the right.">
 		<link rel="match" href="reference/autoheight-regions-in-autoheight-flexbox-001-ref.html">
 		<style>
 			.content {
 				font-family: Ahem;
 				font-size: 20px;
 				line-height: 1em;
+				font-smoothing: none;
 			}
 
 			#c1 {
@@ -34,48 +37,57 @@
 				flex-flow: row-reverse wrap-reverse;
 			}
 
-			.flow1 {
+			.fromFlow1 {
 				flow-from: flow_1;
-				flex: 1 1 auto;
 			}
 
-			.flow2 {
+			.fromFlow2 {
 				flow-from: flow_2;
-				flex: 1 1 auto;
 			}
 
 			#r1 {
 				max-width: 100px;
 				max-height: 40px;
+				flex: 1 1 auto;
 			}
 
 			#r2 {
 				width: 200px;
+				flex: 1 1 auto;
 			}
 
-			#blue {
+			#r3 {
+				flex: 1 1 auto;
+			}
+
+			.blue {
 				color: blue;
 			}
 
+			.red {
+				background-color: red;
+			}
 		</style>
 	</head>
 	<body>
-		<ol>
-			<li>Test passes if you see a blue and a green rectangle.</li>
-		</ol>
+		<ul>
+			<li>Test passes if you see a blue rectangle and a green rectangle, from left to right in this order.</li>
+			<li>The blue rectangle one the left should be taller than the green rectangle on the right.</li>
+			<li>You shouldn't see any red.</li>
+		</ul>
 		<div id="c1" class="content">
 			XXXXX<br>
 			XXXXX<br>
-			<span id="blue">XXXXX</span><br>
+			<span class="blue">XXXXX</span>
 		</div>
 		<div id="c2" class="content">
 			XXXXX<br>
 			XXXXX
 		</div>
 		<div class="flex">
-			<div id="r1" class="flow1"></div>
-			<div id="r2" class="flow2"></div>
-			<div id="r3" class="flow1"></div>
+			<div id="r1" class="fromFlow1"><p class="red">&nbsp;</p></div>
+			<div id="r2" class="fromFlow2"><p class="red">&nbsp;</p></div>
+			<div id="r3" class="fromFlow1"><p class="red">&nbsp;</p></div>
 		</div>
 	</body>
 </html>
