--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-003.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-003.html
@@ -3,13 +3,15 @@
 	<head>
 		<title>CSS Regions: auto-height regions in auto-height flexbox with flex basis</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#break-after">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-basis">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test checks that the computed height of auto-height regions placed in a flexbox container are sized correctly when using the flex basis property.">
+		<meta name="assert" content="Test checks that the computed height of auto-height regions placed in a flex
+		container takes into the account the flex basis property. The space available inside the flex container should
+		be distributed according to the flex basis property. In this particular case, each of the three regions must
+		have a height equal to one third of the flex container's height.">
 		<link rel="match" href="reference/autoheight-regions-in-autoheight-flexbox-003-ref.html">
 		<style>
 			.content {
@@ -17,6 +19,7 @@
 				font-size: 20px;
 				line-height: 1em;
 				color: green;
+				font-smoothing: none;
 				flow-into: flow;
 			}
 
@@ -32,21 +35,29 @@
 			}
 
 			.break {
+				/* Current (Jul 2013) standard way of region breaking */
+				break-after: region;
+				/* Old, non-standard but implemented way of region breaking */
 				region-break-after: always;
+			}
+
+			.red {
+				background-color: red;
 			}
 		</style>
 	</head>
 	<body>
-		<ol>
-			<li>Test passes if you see three green stripes.</li>
-		</ol>
+		<ul>
+			<li>Test passes if you see three horizontal green stripes.</li>
+			<li>You shouldn't see any red.</li>
+		</ul>
 		<div class="content">
 			XXXX<br><div class="break"></div>
 			XXXX<br><div class="break"></div>
 			XXXX<br>
 		</div>
 		<div class="flex">
-			<div class="region">XXXX<br> XXXX </div>
+			<div class="region"><p class="red">&nbsp;</p></div>
 			<div class="region"> </div>
 			<div class="region"> </div>
 		</div>
