--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-004.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-004.html
@@ -5,24 +5,28 @@
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-direction">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test checks that nested regions placed in flexbox containers are laid out properly.">
+		<meta name="assert" content="Test checks that nested regions placed in flex containers
+		are laid out properly. The first flow (blue content) is nested inside the second flow (green content). The user
+		should see three horizontal stripes with the following colors: green, blue, green.">
 		<link rel="match" href="reference/autoheight-regions-in-autoheight-flexbox-004-ref.html">
 		<style>
-			#c1, #c2 {
+			.c1, .c2 {
 				font-family: Ahem;
 				font-size: 20px;
 				line-height: 1em;
 			}
 
-			#c1 {
+			.c1 {
 				color: blue;
 				flow-into: f1;
+				margin-top: 20px;
+				margin-bottom: 20px;
 			}
 
-			#c2 {
+			.c2 {
 				color: green;
 				flow-into: f2;
 			}
@@ -38,18 +42,22 @@
 			.r2 {
 				flow-from: f2;
 			}
+
+			.red {
+				background-color: red;
+			}
 		</style>
 	</head>
 	<body>
-		<ol>
-			<li>Test passes if you see three stripes with colors in the following order: green, blue, green.</li>
-		</ol>
-		<div id="c1">
-			<br>
-			XXX<br>
-			<br>
+		<ul>
+			<li>Test passes if you see a column of three horizontal stripes with colors in the following order:
+				green, blue, green.</li>
+			<li>You shouldn't see any red.</li>
+		</ul>
+		<div class="c1">
+			XXX
 		</div>
-		<div id="c2">
+		<div class="c2">
 			<div class="flex">
 				XXX
 				<div class="r1"></div>
@@ -57,7 +65,7 @@
 			XXX
 		</div>
 		<div class="flex">
-			<div class="r2"> </div>
+			<div class="r2"><p class="red">&nbsp;</p></div>
 		</div>
 	</body>
 </html>
