--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-002.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-002.html
@@ -3,30 +3,32 @@
 	<head>
 		<title>CSS Regions: Auto-height regions inside fixed sized flexbox with column flow</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-grow">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test checks that auto-height regions placed inside a fixed sized flexbox with column flow have the correct computed height.">
+		<meta name="assert" content="Test checks that auto-height regions placed inside a fixed sized flexbox with
+		column flow have the correct computed height. There are two regions placed inside the same flex container
+		having the same 'grow' value. The space should be distributed evenly between the two.">
 		<link rel="match" href="reference/autoheight-regions-in-fixed-sized-flexbox-002-ref.html">
 		<style>
-			.content_1, .content_2 {
+			.content1, .content2 {
 				font-family: Ahem;
 				line-height: 1em;
 				font-size: 20px;
+				font-smoothing: none;
 			}
 
-			.content_1 {
+			.content1 {
 				color: green;
-				flow-into: flow_1;
+				flow-into: flow1;
 			}
 
-			.content_2 {
+			.content2 {
 				color: blue;
-				flow-into: flow_2;
+				flow-into: flow2;
 			}
 
 			#fixed {
@@ -43,14 +45,18 @@
 				flex-direction: column;
 			}
 
-			.region_1 {
-				flow-from: flow_1;
+			.fromFlow1 {
+				flow-from: flow1;
 				flex-grow: 1;
 			}
 
-			.region_2 {
-				flow-from: flow_2;
+			.fromFlow2 {
+				flow-from: flow2;
 				flex-grow: 1;
+			}
+
+			.red {
+				background-color: red;
 			}
 		</style>
 	</head>
@@ -58,27 +64,31 @@
 		<ul>
 			<li>Test passes if you can see two squares: a green square at the top and a blue square at the bottom.</li>
 			<li>The two squares should be of the same size.</li>
+			<li>You shouldn't see any red.</li>
 		</ul>
-		<div class="content_1">
+		<div class="content1">
 			XXXXXXXXXX<br>XXXXXXXXXX<br>
 			XXXXXXXXXX<br>XXXXXXXXXX<br>
 			XXXXXXXXXX<br>XXXXXXXXXX<br>
 			XXXXXXXXXX<br>XXXXXXXXXX<br>
 			XXXXXXXXXX<br>XXXXXXXXXX
 		</div>
-		<div class="content_2">
+		<div class="content2">
 			XXXXXXXXXX<br>XXXXXXXXXX<br>
 			XXXXXXXXXX<br>XXXXXXXXXX<br>
 			XXXXXXXXXX<br>
 		</div>
 		<div class="flex">
-			<div class="region_1">
+			<div class="fromFlow1">
 			</div>
-			<div class="region_2">
+			<div class="fromFlow2">
 			</div>
 			<div id='fixed'>
 			</div>
-			<div class="region_1">
+			<!-- This shouldn't get any content if the flex container distributes space evenly between the first two
+				regions. -->
+			<div class="fromFlow1">
+				<p class="red">&nbsp;</p>
 			</div>
 		</div>
 	</body>
