--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-003.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-003.html
@@ -3,20 +3,21 @@
 	<head>
 		<title>CSS Regions: Auto-height regions inside a fixed sized flexbox with column wrap flow</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-wrap">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test checks the layout of auto-height regions placed inside a flexbox with a fixed size and column wrap flow.">
+		<meta name="assert" content="Test checks the layout of auto-height regions placed inside a flexbox with a fixed
+		size and column wrap flow. The flex container should have two columns with three regions each.">
 		<link rel="match" href="reference/autoheight-regions-in-fixed-sized-flexbox-003-ref.html">
 		<style>
 			.content {
 				font-family: Ahem;
-				line-height: 20px;
+				line-height: 1em;
 				font-size: 20px;
+				font-smoothing: none;
 			}
 
 			#c1 {
@@ -40,24 +41,34 @@
 			.region_1 {
 				flow-from: f1;
 				width: 100px;
+				margin-right: 20px;
 			}
 
 			.region_2 {
 				flow-from: f2;
 				break-after: always;
 				width: 100px;
+				margin-right: 20px;
 			}
 
 			.break {
+				/* Current (Jul 2013) standard way of region breaking */
+				break-after: region;
+				/* Old, non-standard but implemented way of region breaking */
 				region-break-after: always;
+			}
+
+			.red {
+				background-color: red;
 			}
 		</style>
 	</head>
 	<body>
-		<ol>
+		<ul>
 			<li>The green and blue rectangles are regions placed inside a flexbox with column wrap flow.</li>
-			<li>Test passes if you see two columns with a total of 6 alternating green and blue stripes.</li>
-		</ol>
+			<li>Test passes if you see two columns with a total of 6 alternating horizontal green and blue stripes.</li>
+			<li>You shouldn't see any red.</li>
+		</ul>
 		<div class="content" id="c1">
 			XXXXX<br>
 			XXXXX
@@ -91,6 +102,7 @@
 			<div class="region_1">
 			</div>
 			<div class="region_2">
+				<p class="red">&nbsp;</p>
 			</div>
 		</div>
 	</body>
