--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-004.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-004.html
@@ -3,21 +3,22 @@
 	<head>
 		<title>CSS Regions: Auto-height region in fixed sized flexbox using flex basis</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test checks the layout of regions placed inside a fixed sized flexbox using flex basis and column flow.">
+		<meta name="assert" content="Test checks the layout of regions placed inside a fixed sized flexbox using flex
+		basis and column flow. The flex container should force the first region to break by constraining its height.">
 		<link rel="match" href="reference/autoheight-regions-in-fixed-sized-flexbox-004-ref.html">
 		<style>
 			.content {
-				line-height: 1em;
-				font-size: 20px;
 				font-family: Ahem;
+				font-size: 20px;
+				line-height: 1em;
 				color: green;
 				flow-into: flow;
+				font-smoothing: none;
 			}
 
 			.flex {
@@ -25,6 +26,7 @@
 				height: 100px;
 				width: 100px;
 				flex-direction: column;
+				margin-bottom: 20px;
 			}
 
 			.fixed {
@@ -32,20 +34,27 @@
 			}
 
 			.region {
-				flex-basis: 40%;
 				flow-from: flow;
+			}
+
+			#first {
+				flex-basis: 40%;
 			}
 
 			#second {
 				height: 100px;
 			}
+
+			.red {
+				background-color: red;
+			}
 		</style>
 	</head>
 	<body>
-		<ol>
+		<ul>
 			<li>Test passes if you see two green stripes.</li>
 			<li>You should not see any red.</li>
-		</ol>
+		</ul>
 		<div class="content">
 			XXXXX<br>
 			XXXXX<br>
@@ -54,10 +63,10 @@
 		</div>
 		<div class="flex">
 			<div class="fixed"></div>
-			<div class="region"></div>
+			<div class="region" id="first"></div>
 		</div>
-		<br>
 		<div class="region" id="second">
+			<p class="red">&nbsp;</p>
 		</div>
 	</body>
 </html>
