--- a/contributors/adobe/incoming/css3-regions/flexbox/regions-flexbox-001.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/regions-flexbox-001.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Regions: flowing auto-height flexbox elements in region</title>
+		<title>CSS Regions: flowing flexbox elements in region</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
-		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test that flexbox elements with auto height are flowed inside a namedflow.">
-		<link rel="match" href="reference/regions-flexbox-2-ref.html">
+		<meta name="assert" content="Test that flex containers are flowed inside a namedflow.">
+		<link rel="match" href="reference/regions-flexbox-001-ref.html">
 		<style>
 			.flex {
 				display: flex;
-				font-family: Ahem;
-				font-size: 20px;
-				line-height: 20px;
-				color: green;
+				height: 100px;
+				width: 100px;
+				background-color: green;
 				flow-into: flow;
 			}
 
@@ -24,20 +21,21 @@
 				background-color: gray;
 				flow-from: flow;
 			}
+
+			.red {
+				background-color: red;
+			}
 		</style>
 	</head>
 	<body>
 		<ul>
 			<li>Test passes if you see a green square inside a gray rectangle.</li>
+			<li>You shouldn't see any red.</li>
 		</ul>
 		<div class="flex">
-			XXXXX<br>
-			XXXXX<br>
-			XXXXX<br>
-			XXXXX<br>
-			XXXXX
 		</div>
 		<div class="region">
+			<p class="red">&nbsp;</p>
 		</div>
 	</body>
 </html>
