--- a/contributors/adobe/incoming/css3-regions/flexbox/regions-flexbox-004.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/regions-flexbox-004.html
@@ -8,12 +8,12 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
 		<meta name="flags" content="ahem">
 		<meta name="assert" content="Test that content is flowed in a region placed inside a flexbox with auto-height.">
-		<link rel="match" href="reference/regions-flexbox-4.html">
+		<link rel="match" href="reference/regions-flexbox-002.html">
 		<style>
 			.content {
 				font-family: Ahem;
 				font-size: 20px;
-				line-height: 20px;
+				line-height: 1em;
 				color: green;
 				flow-into: flow;
 			}
@@ -26,8 +26,11 @@
 			.flex {
 				display: flex;
 				width: 150px;
-				border: thin black solid;
 				background-color: gray;
+			}
+
+			.red {
+				background-color: red;
 			}
 		</style>
 	</head>
@@ -45,6 +48,7 @@
 		</div>
 		<div class="flex">
 			<div class="region">
+				<p class="red">&nbsp;</p>
 			</div>
 		</div>
 	</body>
