--- a/contributors/adobe/incoming/css3-regions/flexbox/row-flexbox-break.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/row-flexbox-break.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Regions: row flexbox fragmentation</title>
+		<title>CSS Regions: row flex container fragmentation</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#pagination">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test checks that a flexbox container with row flow is split between regions.">
+		<meta name="assert" content="Test checks that a flex container with row flow is split between regions.">
 		<link rel="match" href="reference/row-flexbox-break-ref.html">
 		<style>
 			.flex {
@@ -20,6 +20,7 @@
 			.region {
 				flow-from: flow;
 				height: 40px;
+				margin-bottom: 20px;
 			}
 
 			.item {
@@ -28,18 +29,22 @@
 				line-height: 1em;
 				color: green;
 			}
+
+			.red {
+				background-color: red;
+			}
 		</style>
 	</head>
 	<body>
-		<ol>
-			<li>Test passes if you see two green stripes.</li>
-		</ol>
+		<ul>
+			<li>Test passes if you see two horizontal green stripes on the same horizontal line.</li>
+			<li>You shouldn't see any red.</li>
+		</ul>
 		<div class="flex">
 			<div class="item">XX<br>XX<br>XX<br>XX<br></div>
 			<div class="item">XX<br>XX<br>XX<br>XX<br></div>
 		</div>
-		<div class="region"></div>
-		<br>
-		<div class="region"></div>
+		<div class="region"><p class="red">&nbsp;</p></div>
+		<div class="region"><p class="red">&nbsp;</p></div>
 	</body>
 </html>
