--- a/contributors/adobe/incoming/css3-regions/flexbox/visibility-regions-in-flexbox.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/visibility-regions-in-flexbox.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Regions: Flexbox regions collapsed</title>
+		<title>CSS Regions: collapsed region flex items</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-regions">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#visibility-collapse">
 		<meta name="flags" content="ahem">
-		<meta name="assert" content="Test checks that the flexbox collapsed property works on region flex items.">
+		<meta name="assert" content="Test checks that the flexbox collapsed property works on flex items that are
+		regions. The collapsed region item should not contribute to the flex container's width.">
 		<link rel="match" href="reference/visibility-regions-in-flexbox-ref.html">
 		<style>
 			.content {
@@ -29,6 +28,9 @@
 			}
 
 			.break {
+				/* Current (Jul 2013) standard way of region breaking */
+				break-after: region;
+				/* Old, non-standard but implemented way of region breaking */
 				region-break-after: always;
 			}
 
@@ -36,21 +38,26 @@
 				visibility: collapse;
 				height: 100px;
 			}
+
+			.red {
+				background-color: red;
+			}
 		</style>
 	</head>
 	<body>
-		<ol>
+		<ul>
 			<li>Test passes if you see a single green stripe.</li>
-		</ol>
+			<li>You shouldn't see any red.</li>
+		</ul>
 		<div class="content">
 			XXXXX<br><div class="break"></div>
 			XXXXX<div class="break"></div>
 			XXXXX<br>
 		</div>
 		<div class="flex">
-			<div class="region" id="r1">Test failed.</div>
+			<div class="region"><p class="red">&nbsp;</p></div>
 			<div class="region" id="r2"></div>
-			<div class="region" id="r3"></div>
+			<div class="region"></div>
 		</div>
 	</body>
 </html>
